js/src/tests/test262/built-ins/Error/isError/primitives.js
assert
.
sameValue
(
Error
.
isError
(
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
undefined
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
null
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
true
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
false
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
0
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
-
0
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
NaN
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
Infinity
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
-
Infinity
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
42
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
'
'
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
'
foo
'
)
false
)
;
reportCompare
(
0
0
)
;
